# ghostty-toggle

./: README.md  pyproject.toml
Formula/: ghostty-toggle.rb
src/ghostty_toggle/: cli.py  core.py  prompt_app.py  textual_app.py
tests/: test_core.py
